Üretim MES sayfası düzenlendi.

--- a/NOVA/Views/Shared/_Layout_MES.cshtml
+++ b/NOVA/Views/Shared/_Layout_MES.cshtml
@@ -39,7 +39,7 @@
         .marquee {
             position: absolute;
             bottom: 2.5rem;
-            height: 20px;
+            height: 22px;
             width: 100%;
             overflow: hidden;
         }
@@ -232,7 +232,7 @@
 
         <div class="marquee" onmouseover="this.stop();" onmouseout="this.start();">
             <div>
-                <span>
+                <span id="SummaryData">
                     <label id="AylikMiktarOzet"></label>
                     <label id="AylikHurdaOzet"></label>
                     <label id="AylikKalite2Ozet"></label>
@@ -240,7 +240,6 @@
                     <label id="YillikHurdaOzet"></label>
                     <label id="YillikKalite2Ozet"></label>
                 </span>
-
             </div>
         </div>
 
@@ -261,22 +260,22 @@
                 url: 'http://192.168.2.13:83/api/makine/mes',
                 success: function (data) {
                     if (data.length > 0) {
-                        var AylikMiktarBilgi = '<label class="ms-3">AYLIK MİKTAR→ </label>';
+                        var AylikMiktarBilgi = '<label class="ms-3">AYLIK ÜRETİM MİKTARI→ </label>';
                         var AylikHurdaBilgi = '<label class="ms-3">AYLIK HURDA→ </label>';
                         var AylikKalite2Bilgi = '<label class="ms-3">AYLIK 2. KALİTE→ </label>';
 
-                        var YillikMiktarBilgi = '<label class="ms-3">YILLIK MİKTAR→ </label>';
+                        var YillikMiktarBilgi = '<label class="ms-3">YILLIK ÜRETİM MİKTAR→ </label>';
                         var YillikHurdaBilgi = '<label class="ms-3">YILLIK HURDA→ </label>';
                         var YillikKalite2Bilgi = '<label class="ms-3">YILLIK 2. KALİTE→ </label>';
 
                         data?.forEach((item) => {
-                            AylikMiktarBilgi += `<img class="mb-1" style="margin-right: 3px; margin-left: 25px; height: 15px " src="/assets/img/icons/brands/Nova.png" alt="">${item.HATKODU}: ${MiktarFormat(item.AYLIK_TOPLAM_MIKTAR, 'KG')}`;
-                            AylikHurdaBilgi += `<img class="mb-1" style="margin-right: 3px; margin-left: 25px; height: 15px " src="/assets/img/icons/brands/Nova.png" alt="">${item.HATKODU}: ${MiktarFormat(item.AY_TOPLAM_HURDA, 'KG')}`;
-                            AylikKalite2Bilgi += `<img class="mb-1" style="margin-right: 3px; margin-left: 25px; height: 15px " src="/assets/img/icons/brands/Nova.png" alt="">${item.HATKODU}: ${MiktarFormat(item.AY_TOPLAM_KALITE2, 'KG')}`;
+                            AylikMiktarBilgi += `<img class="mb-1" style="margin-right: 25px; margin-left: 25px; height: 20px " src="/assets/img/icons/brands/NOVA_LOGO_CIRCLE.png" alt="">${item.HATKODU}: ${MiktarFormat(item.AYLIK_TOPLAM_MIKTAR, 'KG')}`;
+                            AylikHurdaBilgi += `<img class="mb-1" style="margin-right: 25px; margin-left: 25px; height: 20px " src="/assets/img/icons/brands/NOVA_LOGO_CIRCLE.png" alt="">${item.HATKODU}: ${MiktarFormat(item.AY_TOPLAM_HURDA, 'KG')}`;
+                            AylikKalite2Bilgi += `<img class="mb-1" style="margin-right: 25px; margin-left: 25px; height: 20px " src="/assets/img/icons/brands/NOVA_LOGO_CIRCLE.png" alt="">${item.HATKODU}: ${MiktarFormat(item.AY_TOPLAM_KALITE2, 'KG')}`;
 
-                            YillikMiktarBilgi += `<img class="mb-1" style="margin-right: 3px; margin-left: 25px; height: 15px " src="/assets/img/icons/brands/Nova.png" alt="">${item.HATKODU}: ${MiktarFormat(item.YILLIK_TOPLAM_MIKTAR, 'KG')}`;
-                            YillikHurdaBilgi += `<img class="mb-1" style="margin-right: 3px; margin-left: 25px; height: 15px " src="/assets/img/icons/brands/Nova.png" alt="">${item.HATKODU}: ${MiktarFormat(item.YIL_TOPLAM_HURDA, 'KG')}`;
-                            YillikKalite2Bilgi += `<img class="mb-1" style="margin-right: 3px; margin-left: 25px; height: 15px " src="/assets/img/icons/brands/Nova.png" alt="">${item.HATKODU}: ${MiktarFormat(item.YIL_TOPLAM_KALITE2, 'KG')}`;
+                            YillikMiktarBilgi += `<img class="mb-1" style="margin-right: 25px; margin-left: 25px; height: 20px " src="/assets/img/icons/brands/NOVA_LOGO_CIRCLE.png" alt="">${item.HATKODU}: ${MiktarFormat(item.YILLIK_TOPLAM_MIKTAR, 'KG')}`;
+                            YillikHurdaBilgi += `<img class="mb-1" style="margin-right: 25px; margin-left: 25px; height: 20px " src="/assets/img/icons/brands/NOVA_LOGO_CIRCLE.png" alt="">${item.HATKODU}: ${MiktarFormat(item.YIL_TOPLAM_HURDA, 'KG')}`;
+                            YillikKalite2Bilgi += `<img class="mb-1" style="margin-right: 25px; margin-left: 25px; height: 20px " src="/assets/img/icons/brands/NOVA_LOGO_CIRCLE.png" alt="">${item.HATKODU}: ${MiktarFormat(item.YIL_TOPLAM_KALITE2, 'KG')}`;
                         });
 
                         $('#AylikMiktarOzet').html(AylikMiktarBilgi + '<label class="ms-3">•</label>');
