Üretim MES - Günlük Özet - Hurda ve 2. Kaliteye oran eklendi.

--- a/NOVA/Views/Shared/_Layout_MES.cshtml
+++ b/NOVA/Views/Shared/_Layout_MES.cshtml
@@ -292,7 +292,7 @@
 
 
         function MiktarFormat(Value, Unit = '') {
-            return Value !== null ? `${parseFloat(Value).toLocaleString(undefined, { minimumFractionDigits: 0, maximumFractionDigits: 0 })} ${Unit}` : '-';
+            return (Value !== null && Value !== 0) ? `${parseFloat(Value).toLocaleString(undefined, { minimumFractionDigits: 0, maximumFractionDigits: 0 })} ${Unit}` : '-';
         }
     </script>
 
