--- a/NOVA/Views/Uretim/Partials/MES/AllMachines/DL01.cshtml
+++ b/NOVA/Views/Uretim/Partials/MES/AllMachines/DL01.cshtml
@@ -26,6 +26,7 @@
                         <div class=" d-flex flex-column justify-content-center align-items-start kombinasyon-scroll"></div>
                     </div>
                 </marquee>
+                <span class="empty">Bilgi Bulunamadı.</span>
             </div>
         </div>
 
@@ -60,11 +61,13 @@
     {
         if (KombinasyonBox(Data) == '<span>Bilgi Bulunamadı.</span>') {
             $('#DL01 .kombinasyon .info .marq').hide();
-            $('#DL01 .kombinasyon .info').html('<span>Bilgi Bulunamadı.</span>');
+            $('#DL01 .kombinasyon .info .empty').show();
             $('#DL01 .kombinasyon .info').css('height', '25px');
         }
         else {
             $('#DL01 .kombinasyon .info .marq').show();
+            $('#DL01 .kombinasyon .info .empty').hide();
+            $('#DL01 .kombinasyon .info').css('height', '60px');
         }
 
         $('#DL01 .rulo-acici .info').html(RuloAciciBox(Data));
