--- a/NOVA/Views/Uretim/Partials/MES/AllMachines/_MainPartial.cshtml
+++ b/NOVA/Views/Uretim/Partials/MES/AllMachines/_MainPartial.cshtml
@@ -3,7 +3,6 @@
         height: calc(100svh - 45px - 4.50rem);
         max-width: -moz-available;
         max-width: -webkit-fill-available;
-        max-width: fill-available;
         display: flex;
         align-items: center;
         gap: 10px;
@@ -26,6 +25,7 @@
         }
 
     .machine-content {
+        padding-right: 0.25rem;
         width: 100%;
         overflow: hidden;
         overflow-y: auto;
@@ -49,7 +49,7 @@
 
         .info-box > span {
             position: absolute;
-            top: -8px;
+            top: -10px;
             left: 10px;
             font-size: smaller;
             background: linear-gradient(0deg, var(--empty-infobox-color) 0 50%, var(--empty-header-color) 50% 100%);
